# gtest_cmake_coverage

./: .gitignore  CMakeLists.txt  README.md  setup.sh
inc/: module_under_test.h
src/: module_under_test.c
test/: module_under_test_test.cc
